# arwa

./: .gitignore  README.org  arwa.el  config.yaml  pyproject.toml  schema.sql
arwa/: calendar_utils.py  cli.py  geo.py  slack_utils.py  storage.py  types.py
arwa-sidekick/: README.org  manifest.json  sidebar.css  sidebar.html  sidebar.js
resources/: bulk-post-config.yaml
scripts/: slack_export.py  slack_sentinel.py  slack_user_info.py
tests/: test_arwa.py  test_calendar_utils.py
