[project]
name = "arwa"
version = "0.2.0"
description = ""
authors = [
    { name = "Abhinav Tushar", email = "abhinav@lepisma.xyz" },
]
requires-python = ">=3.8,<4.0"
dependencies = [
    "slackclient>=2.8.2,<3.0.0",
    "pydash>=4.8.0,<5.0.0",
    "setuptools>=61,<81",
    "gspread>=3.6.0,<4.0.0",
    "gcsa>=0.3.2,<0.4.0",
    "docopt>=0.6.2,<0.7.0",
    "jsonlines>=1.2.0,<2.0.0",
    "tqdm>=4.49.0,<5.0.0",
    "pytz>=2020.4,<2021.0",
    "tabulate>=0.8.7,<0.9.0",
    "IP2Location>=8.5.1,<9.0.0",
    "pandas>=1.5.3,<2.0.0",
    "PyYAML>=6.0,<7.0",
    "plotly>=4.13.0,<5.0.0",
    "Jinja2>=2.11.2,<3.0.0",
    "portion>=2.1.4,<3.0.0",
]

[project.scripts]
arwa = "arwa.cli:main"

[dependency-groups]
dev = [
    "pytest>=6.0.1,<7.0.0",
]

[tool.setuptools.packages.find]
include = ["arwa*"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
